Fix responsive x overflow and skill icons

--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -1,6 +1,7 @@
 .header {
   display: flex;
   gap: 1.6rem;
+  position: relative;
 }
 
 .nav-container {
